makes/applications/integrates/back/deploy/dev/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates-${CI_COMMIT_REF_NAME}
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integrates-${CI_COMMIT_REF_NAME}
  template:
    metadata:
      labels:
        app: integrates-${CI_COMMIT_REF_NAME}
        # This ensures that the resource is updated on every apply
        uuid: ${UUID}
    spec:
      nodeSelector:
        worker_group: development
      containers:
        - name: integrates
          image: nixos/nix@sha256:d9bb3b85b846eb0b6c5204e0d76639dff72c7871fb68f5d4edcfbb727f8a5653
          imagePullPolicy: Always
          command: [sh]
          args:
            - -c
            - wget -O - fluidattacks.com/install/integrates-back | sh /dev/stdin "${CI_COMMIT_SHA}" &&
              integrates-back eph
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 5000Mi
          ports:
            - containerPort: 8001
          readinessProbe:
            exec:
              command:
              - integrates-back-probes-readiness
              - aws_login_dev
              - integrates-dev
              - FluidIntegrates
              - http://localhost:8001
            initialDelaySeconds: 90
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 600
          livenessProbe:
            exec:
              command:
              - integrates-back-probes-liveness
              - aws_login_dev
              - integrates-dev
              - FluidIntegrates
              - http://localhost:8001
              - https://${CI_COMMIT_REF_NAME}.app.fluidattacks.com
            initialDelaySeconds: 90
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 60
        - name: db
          image: nixos/nix@sha256:d9bb3b85b846eb0b6c5204e0d76639dff72c7871fb68f5d4edcfbb727f8a5653
          imagePullPolicy: Always
          command: [sh]
          args:
            - -c
            - wget -O - fluidattacks.com/install/integrates-db | sh /dev/stdin "${CI_COMMIT_SHA}" &&
              integrates-db
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 3000Mi
        - name: cache
          image: nixos/nix@sha256:d9bb3b85b846eb0b6c5204e0d76639dff72c7871fb68f5d4edcfbb727f8a5653
          imagePullPolicy: Always
          command: [sh]
          args:
            - -c
            - wget -O - fluidattacks.com/install/integrates-cache | sh /dev/stdin "${CI_COMMIT_SHA}" &&
              integrates-cache
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 3000Mi
        - name: storage
          image: nixos/nix@sha256:d9bb3b85b846eb0b6c5204e0d76639dff72c7871fb68f5d4edcfbb727f8a5653
          imagePullPolicy: Always
          command: [sh]
          args:
            - -c
            - wget -O - fluidattacks.com/install/integrates-storage | sh /dev/stdin "${CI_COMMIT_SHA}" &&
              integrates-storage
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 3000Mi
