makes/applications/integrates/back/deploy/dev/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integrates-__DEPLOYMENT_NAME__
  namespace: development
spec:
  type: NodePort
  ports:
    - name: integrates
      port: 81
      targetPort: 8001
      protocol: TCP
  selector:
    app: integrates-__DEPLOYMENT_NAME__
