makes/applications/integrates/back/deploy/dev/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: integrates-${CI_COMMIT_REF_NAME}
  namespace: development
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: management:product=integrates,management:type=development
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
    alb.ingress.kubernetes.io/security-groups: CloudFlare
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200,302
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '6'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
    - host: ${CI_COMMIT_REF_NAME}.integrates.fluidattacks.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: integrates-${CI_COMMIT_REF_NAME}
              servicePort: 81
